--- a/index.html
+++ b/index.html
@@ -117,14 +117,8 @@
       const ts = item.update_timestamp || item.timestamp || '';
       const readings = item.readings || {};
 
-      // Canonical region order and robust detection
-      const CANON = ['national', 'central', 'west', 'east', 'north', 'south'];
-      const regionSet = new Set();
-      readingOrder.forEach(k => {
-        const obj = readings[k];
-        if (obj) Object.keys(obj).forEach(r => regionSet.add(r));
-      });
-      const regions = CANON.filter(r => regionSet.has(r));
+      
+      const regions = ['national','central','west','east','north','south'];
 
       // Build table
       const table = document.createElement('table');
